# spin-verman

./: Cargo.toml  spin
src/: config.rs  constants.rs  main.rs  utils.rs  versions.rs
src/commands/: install.rs  list.rs  mod.rs  set.rs  uninstall.rs
