[package]
name = "spin-verman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "3.2.24", features = ["derive", "env"] }

[build-dependencies]
vergen = { version = "^8.2.1", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "cargo",
] }
