[package]
name = "spin-verman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "3.2.24", features = ["derive", "env"] }
dirs = "5.0.1"
flate2 = "1.0.28"
reqwest = "0.12.2"
semver = "1.0.22"
tar = "0.4.40"
tokio = { version = "1.37", features = ["full"] }

[build-dependencies]
vergen = { version = "^8.2.1", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "cargo",
] }
